# granola-sync

./: .gitignore  CLAUDE.md  README.md  granola-sync-service-plan.md  pyproject.toml
docs/: strategy-api-first-sync.md
src/granola_sync/: __init__.py  __main__.py  cli.py  config.py  granola_api.py  logging.py  state.py  sync.py  webhook.py
src/granola_sync/templates/: launchd.plist  systemd.service
tests/: __init__.py  test_cli.py  test_granola_api.py  test_state.py  test_sync.py  test_webhook.py
